<resources>
    <string name="app_name">RepetitorHelper</string>
    <string name="title_time_table">Time table</string>
    <string name="title_students">Students</string>
    <string name="title_accounting_class">Accounting class</string>
    <string name="name_student">Имя</string>
    <string name="surname_student">Фамилия</string>
    <string name="phone_student">Номер телефона</string>
    <string name="place_of_class">Формат обучения:</string>
    <string name="btn_save_student">Добавить ученика:</string>
    <string name="btn_new_student">Новый ученик</string>
    <string name="tv_count_class_title">Количество занятий в месяц: </string>
    <string name="tv_price_class_title">Стоимость 1 занятия: </string>
    <string name="tv_income_title">Доход от ученика в месяц: </string>
    <string name="tv_class_missed_title_profile">Пропущено занятий: </string>
    <string name="btn_missed_class">Занятие пропущено</string>
    <string name="btn_missed_class_clear">Сброс</string>
    <string name="btn_list_theme">Список изучаемых тем</string>
    <string name="btn_homework">Домашнее задание</string>
    <string name="count_of_class">Количество занятий в месяц</string>
    <string name="price_of_class">Стоимость занятия</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">Hello blank fragment</string>
    <string name="count_class_time_table">Количество занятий:</string>
    <string name="count_cancel_class_title">Количество пропущенных занятий:</string>
    <string name="send_money">Оплатил</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>
    <string name="money_img">money</string>
    <string name="student_img">student</string>
    <string name="profile_img">profile</string>
    <string name="profile">Профиль</string>
    <string name="btn_cancel_count">+1 Пропуск</string>
    <string name="add_cancel">Добавить пропуск</string>
    <string name="cancel_class">Отменено занятие</string>
    <string name="count_students_repetitor">Количество учеников:</string>
    <string name="count_class_repetitor">Количество занятий:</string>
    <string name="all_price_of_month">Заработанная сумма денег без отмен занятий:</string>
    <string name="all_price_of_month_with_cancel">Заработанная сумма денег с учетом отмен занятий:</string>
    <string name="cancel_count_of_month"> Количество отмененных занятий:</string>
    <string name="description_accounting_class">Здесь вы можете отслеживать, а также вести учет не оплаченных и отмененных занятий.</string>
    <string name="description_students">Добавляйте новых учеников, следите за их количеством и информацией о каждом из них</string>
</resources>