<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStudentActivity">

    <EditText
        android:id="@+id/edt_name_student"
        android:layout_width="271dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/name_student"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_surname_student"
        android:layout_width="271dp"
        android:layout_height="44dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/surname_student"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_name_student" />

    <EditText
        android:id="@+id/edt_phone_student"
        android:layout_width="271dp"
        android:layout_height="44dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/phone_student"
        android:inputType="phone"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_surname_student" />

    <EditText
        android:id="@+id/edt_count_of_class_student"
        android:layout_width="271dp"
        android:layout_height="44dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/count_of_class"
        android:inputType="number"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_phone_student" />

    <Spinner
        android:id="@+id/sp_place_of_class"
        android:layout_width="166dp"
        android:layout_height="28dp"
        android:layout_marginBottom="400dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_place_of_class"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_place_of_class"
        android:layout_width="127dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/place_of_class"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_price_class" />

    <EditText
        android:id="@+id/edt_price_class"
        android:layout_width="271dp"
        android:layout_height="44dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/price_of_class"
        android:inputType="number"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_count_of_class_student" />

    <Button
        android:id="@+id/btn_save_student"
        android:layout_width="match_parent"
        android:layout_margin="6dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_save_student"
        app:backgroundTint="#F058EC0A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>